@@ -1,3 +1,9 @@
+2013-06-10 Paulo Andrade <pcpa@gnu.org>
+
+	* lib/jit_hppa.c: Sanitize the cache synchronization inline
+	assembly code that was doing twice the work and redundantly
+	flushing the end address every loop iteration.
+
 2013-06-09 Paulo Andrade <pcpa@gnu.org>
 
 	* configure.ac, check/Makefile.am, doc/Makefile.am: Do not
